move background images to media folder/update url

--- a/recipes/templates/recipes/recipes_home.html
+++ b/recipes/templates/recipes/recipes_home.html
@@ -1,11 +1,11 @@
-{% load static %}
+<!-- {% load static %} -->
 <!DOCTYPE html>
 <!-- basic html design -->
 <html>
 	<title>Recipe App!</title>
 	<style>
 		body {
-			background: url("{% static 'recipes/images/welcome_background.jpg' %}") no-repeat fixed;
+			background: url("welcome_background.jpg") no-repeat fixed;
 			background-size: cover;
 			position: relative;
 		}
