add second media folder

--- a/recipes/templates/recipes/recipes_home.html
+++ b/recipes/templates/recipes/recipes_home.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <!-- basic html design -->
 <html>
-	<title>Recipe App</title>
+	<title>Recipe App!!!!</title>
 	<style>
 		body {
-			background: url("media/welcome_background.jpg") no-repeat fixed;
+			background: url("/media/welcome_background.jpg") no-repeat fixed;
 			background-size: cover;
 			position: relative;
 		}
