--- a/recipes/templates/recipes/recipes_home.html
+++ b/recipes/templates/recipes/recipes_home.html
@@ -5,7 +5,7 @@
 	<title>Recipe App</title>
 	<style>
 		body {
-			background: url("../media/welcome_background.jpg") no-repeat fixed;
+			background: url("/recipes/media/welcome_background.jpg") no-repeat fixed;
 			background-size: cover;
 			position: relative;
 		}
