--- a/recipes/templates/recipes/recipes_home.html
+++ b/recipes/templates/recipes/recipes_home.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <!-- basic html design -->
 <html>
-	<title>Recipe App</title>
+	<title>Recipe App!!!!!!!</title>
 	<style>
 		body {
 			background: url("../../media/welcome_background.jpg") no-repeat fixed;
