--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -5,7 +5,7 @@
 	<title>Recipe App</title>
 	<style>
 		body {
-			background: url("{% static 'media/welcome_background.jpg' %}") no-repeat fixed;
+			background: url("{% static 'welcome_background.jpg' %}") no-repeat fixed;
 			background-size: cover;
 			position: relative;
 		}
