--- a/recipes/templates/recipes/recipes_home.html
+++ b/recipes/templates/recipes/recipes_home.html
@@ -5,7 +5,7 @@
 	<title>Recipe App!</title>
 	<style>
 		body {
-			background: url("{% get_media_prefix %}welcome_background.jpg") no-repeat fixed;
+			background: url("../../../media/welcome_background.jpg") no-repeat fixed;
 			background-size: cover;
 			position: relative;
 		}
